--- a/app/src/main/res/layout/fragment_system_reqs.xml
+++ b/app/src/main/res/layout/fragment_system_reqs.xml
@@ -1,22 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-
     >
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabsLayoutSystemReqs"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        >
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="bottom"
+            app:layout_scrollFlags="scroll"
+            app:subtitle="@string/system_requirements"
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            tools:title="Final Fantasy XIV: A Realm Reborn"
+            />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabsLayoutSystemReqs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpSystemReqs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         />
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
