--- a/app/src/main/res/layout/item_game_details_platforms.xml
+++ b/app/src/main/res/layout/item_game_details_platforms.xml
@@ -31,6 +31,7 @@
             />
 
         <ImageView
+            android:id="@+id/ivForward"
             android:layout_width="@dimen/touchable_view_half_size"
             android:layout_height="@dimen/touchable_view_half_size"
             android:layout_marginStart="@dimen/spacing_small"
