add detailed description screen

--- a/app/src/main/res/layout/item_game_details_short_description.xml
+++ b/app/src/main/res/layout/item_game_details_short_description.xml
@@ -2,21 +2,43 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/GameDetailsItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/header"
         style="@style/Widget.MyTheme.GameDetailsHeadline"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables"
+        android:background="?selectableItemBackground"
         android:paddingLeft="@dimen/default_activity_margin"
         android:paddingRight="@dimen/default_activity_margin"
-        android:text="@string/game_details_description"
-        android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsHeadline"
-        />
+        >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/game_details_description"
+            android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsHeadline"
+            />
+
+        <ImageView
+            android:id="@+id/ivForward"
+            android:layout_width="@dimen/touchable_view_half_size"
+            android:layout_height="@dimen/touchable_view_half_size"
+            android:layout_marginStart="@dimen/spacing_small"
+            app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
+            />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvDescription"
