--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,6 +17,10 @@
     <declare-styleable name="PreferenceView">
         <attr name="prefTitle" format="string" />
         <attr name="prefValue" format="string" />
+        <attr name="type" format="enum">
+            <enum name="dropdown" value="0" />
+            <enum name="forward" value="1" />
+        </attr>
     </declare-styleable>
 
     <declare-styleable name="GameView">
