--- a/app/src/main/res/layout/view_preference.xml
+++ b/app/src/main/res/layout/view_preference.xml
@@ -40,6 +40,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="@dimen/touchable_view_half_size"
         android:layout_height="@dimen/touchable_view_half_size"
         android:layout_weight="0"
