hidden games in progress

--- a/app/src/main/res/layout/fragment_hidden_games.xml
+++ b/app/src/main/res/layout/fragment_hidden_games.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="bottom"
-            app:layout_scrollFlags="scroll"
+            app:layout_scrollFlags="scroll|enterAlways"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/hidden_games"
             />
@@ -27,6 +27,8 @@
         android:id="@+id/rvHiddenGames"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="@dimen/default_activity_margin"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         />
 
