--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -58,6 +58,9 @@
 
         <item name="elevationOverlayEnabled">false</item>
 
+        <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeStyle">@style/ActionModeStyle</item>
+
         <item format="float" name="alphaEmphasisDisabled" type="dimen">@dimen/alpha_emphasis_disabled</item>
         <item format="float" name="alphaEmphasisHigh" type="dimen">@dimen/alpha_emphasis_high</item>
         <item format="float" name="alphaEmphasisMedium" type="dimen">@dimen/alpha_emphasis_medium</item>
