--- a/app/src/main/res/layout/item_hidden_game.xml
+++ b/app/src/main/res/layout/item_hidden_game.xml
@@ -4,13 +4,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:stateListAnimator="@drawable/hidden_games_state_list_animator"
     >
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardViewBottom"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/color_surface"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:stateListAnimator="@drawable/hidden_games_bottom_card_view_animator"
+        />
 
     <ru.luckycactus.steamroulette.presentation.ui.widget.GameView
         android:id="@+id/gameView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:stateListAnimator="@drawable/hidden_games_state_list_animator"
         app:layout_constraintDimensionRatio="2:3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
