--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="steam">#192431</color>
     <color name="steam_light">#1C2A39</color>
     <color name="steam_light_2">#223349</color>
+    <color name="steam_light_3">#516587</color>
+    <color name="steam_light_4">#7693C4</color>
+    <color name="steam_light_5">#A4C7FA</color>
     <color name="steam_dark">#16202B</color>
     <color name="steam_dark_2">#141A25</color>
 
