--- a/app/src/main/res/layout/item_game_details_header.xml
+++ b/app/src/main/res/layout/item_game_details_header.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/GameDetailsItem"
+    style="@style/GameDetailsItem.NoTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
