--- a/app/src/main/res/layout/item_game_details_screenshots.xml
+++ b/app/src/main/res/layout/item_game_details_screenshots.xml
@@ -2,7 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rvMedia"
-    style="@style/GameDetailsItem"
+    style="@style/GameDetailsItem.NoTitle"
     android:layout_width="match_parent"
     android:layout_height="@dimen/game_details_screenshot_height"
     />
