--- a/app/src/main/res/menu/menu_hidden_games.xml
+++ b/app/src/main/res/menu/menu_hidden_games.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/action_clear_all"
         android:icon="@drawable/ic_clear_all_black_24dp"
-        android:title="@string/clear_all"
+        android:title="@string/make_all_games_visible"
         app:showAsAction="always"
         />
 </menu>
