--- a/app/src/main/res/layout/divider.xml
+++ b/app/src/main/res/layout/divider.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="1px"
     android:background="@color/divider"
+    android:layout_marginTop="@dimen/spacing_small"
+    android:layout_marginBottom="@dimen/spacing_small"
     >
 
 </View>
