--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/color_background"
+    android:background="?android:colorBackground"
     >
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_reply_black_24dp"
+        app:srcCompat="@drawable/ic_reply_24dp"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
