--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -7,6 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:paddingTop="@dimen/spacing_small"
+    android:paddingBottom="@dimen/spacing_small"
     >
 
     <!-- Header -->
@@ -16,11 +18,9 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="@dimen/default_activity_margin"
-        android:paddingLeft="@dimen/default_activity_margin"
-        android:paddingTop="@dimen/default_activity_margin"
+        android:paddingTop="@dimen/spacing_small"
         android:paddingEnd="4dp"
-        android:paddingRight="4dp"
-        android:paddingBottom="@dimen/default_activity_margin"
+        android:paddingBottom="@dimen/spacing_small"
         >
 
         <ImageView
@@ -33,8 +33,8 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:orientation="vertical"
             >
@@ -79,7 +79,7 @@
                 android:layout_height="48dp"
                 android:background="@drawable/selectable_item_background_oval"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/ic_refresh_white_24dp"
+                app:srcCompat="@drawable/ic_refresh_24dp"
                 />
 
             <ru.luckycactus.steamroulette.presentation.ui.widget.LuxuryProgressBar
@@ -99,16 +99,23 @@
 
     <include layout="@layout/divider" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnExit"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvAbout"
+        style="@style/MenuItemTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:background="@drawable/selectable_item_background"
-        android:gravity="start|center_vertical"
-        android:text="@string/exit"
+        android:drawableStart="@drawable/ic_info_24dp"
+        android:drawableEnd="@drawable/ic_chevron_right"
+        android:text="@string/about_app"
+        />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvExit"
+        style="@style/MenuItemTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
+        android:text="@string/log_out"
         />
 
 </LinearLayout>
