--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -8,7 +8,7 @@
     android:clipChildren="false"
     android:orientation="vertical"
     android:transitionGroup="false"
-    android:background="@color/color_background"
+    android:background="?android:colorBackground"
     >
 
     <FrameLayout
@@ -51,7 +51,7 @@
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/fabGameInfo"
-                app:srcCompat="@drawable/ic_visibility_off_white_24dp"
+                app:srcCompat="@drawable/ic_visibility_off_24dp"
                 />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -63,7 +63,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/fabHideGame"
                 app:layout_constraintRight_toLeftOf="@id/fabNextGame"
-                app:srcCompat="@drawable/ic_info_black_24dp"
+                app:srcCompat="@drawable/ic_info_24dp"
                 />
 
 
@@ -74,7 +74,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/fabGameInfo"
                 app:layout_constraintRight_toRightOf="parent"
-                app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
+                app:srcCompat="@drawable/ic_chevron_right"
+                android:tint="#fff"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
