--- a/app/src/main/res/layout/item_game_details_short_description.xml
+++ b/app/src/main/res/layout/item_game_details_short_description.xml
@@ -90,7 +90,7 @@
             android:id="@+id/layoutMetacriticScore"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:foreground="?selectableItemBackground"
+            android:background="?selectableItemBackground"
             android:orientation="horizontal"
             >
 
