--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="AppTheme" parent="BaseAppTheme">
         <item name="android:navigationBarColor">?colorSurface</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">?android:colorBackground</item>
         <item name="android:navigationBarDividerColor" tools:ignore="NewApi">@color/divider</item>
     </style>
 
