add all libraries into json

--- a/app/src/main/res/layout/fragment_app_libraries.xml
+++ b/app/src/main/res/layout/fragment_app_libraries.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="bottom"
-            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_scrollFlags="scroll"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/open_source_libraries"
             />
