--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -76,6 +76,17 @@
                 app:layout_constraintTop_toBottomOf="@id/tvSourceCode"
                 />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvPrivacyPolicy"
+                style="@style/AboutItemTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_security_24dp"
+                android:drawableEnd="@drawable/ic_chevron_right"
+                android:text="@string/privacy_policy"
+                app:layout_constraintTop_toBottomOf="@id/tvUsedLibraries"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
