--- a/app/src/main/res/values/ints.xml
+++ b/app/src/main/res/values/ints.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="dialog_anim_duration">100</integer>
+    <integer name="fragment_anim_duration">@android:integer/config_shortAnimTime</integer>
 </resources>
